seguindo implementacao de home membros

--- a/src/main.scss
+++ b/src/main.scss
@@ -33,8 +33,11 @@ code {
   --blue-dark: #14004f;
   --blue-light: #1f57e8;
   --blue-input: #323645;
+  --gray-dark: #282A37;
+  
 
   --red-light: #DC3545;
+  --green-light: #007A40;
 
   /* Firefox */
   * {
