--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -53,6 +53,7 @@
 
           color: #fff;
           transition-delay: 1000ms;
+          text-decoration: none !important;
 
           &:hover {
             border-radius: 8px;
