ajustando async dos eventos de entrar e sair da lobby

--- a/src/app/memberArea/modules/Lobby/styles.scss
+++ b/src/app/memberArea/modules/Lobby/styles.scss
@@ -26,6 +26,9 @@
       flex-direction: column;
       justify-content: space-between;
 
+      .fa-crown{
+        color: #FFB800;
+      }
 
       .clipboard__link{
         display: flex;
